[package]
edition = "2021"
name = "gem_common"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
solana-program = "~1.16.5"
spl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = [
  "no-entrypoint",
] }
spl-math = { version = "0.1.0", features = ["no-entrypoint"] }
spl-token = { version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = ">= 0.6, < 0.9", features = ["no-entrypoint"] }
static_assertions = "1.1.0"
thiserror = "1.0.30"
