[package]
description = "offer a yield-bearing facility to gem stakers"
edition = "2021"
name = "gem_farm"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
doctest = false
name = "gem_farm"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = "0.28.0"
arrayref = "0.3.6"
bitflags = "1.3.2"
bytemuck = "1.7.2"
gem_bank = { path = "../gem_bank", features = ["cpi"] }
gem_common = { path = '../../lib/gem_common' }
proc_macros = { path = '../../lib/proc_macros' }
solana-program = "~1.16.5"
spl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = [
  "no-entrypoint",
] }
spl-token = { version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = ">= 0.6, < 0.9", features = ["no-entrypoint"] }
static_assertions = "1.1.0"
thiserror = "1.0.30"
